# safepay

./: .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api_integration.py  device_ip_analyzer.py  emergency-server.cjs  emergency-server.js  enhanced_qr_scanner.py  fraud_heatmap_visualization.py  fraud_map.py  index.html  model.joblib  optimized_qr_scanner.py  package-lock.json  package.json  pyproject.toml  qr_data.json  qr_scam_service.py  qr_scan_ml_service.py  qr_text_model.joblib  replit.nix  requirements_qr.txt  run_all_analysis.py  run_optimized_qr_service.py  scam_data.csv  scam_message_detector.py  scam_model.pkl  scam_model.py  start_enhanced_qr_service.py  start_optimized_qr_service.py  start_qr_ml_service.py  start_qr_service.py  start_qr_services.sh  tailwind.config.ts  test_enhanced_qr.py  test_optimized_qr.py  theme.json  (+6 more)
attached_assets/: Pasted--Implementation-Prompt-for-Replit-App-Voice-Scam-Detection-with-Speech-Analytics-Objective-Enha-1744912722052.txt  Pasted--Real-Time-Voice-Scam-Detection-for-UPI-Transactions-Goal-Build-a-full-stack-system-that-captures--1744878823849.txt  Pasted--Recommended-Approach-Microservice-Architecture-mermaid-Copy-graph-TD-A-React-Frontend-B-N-1744824313966.txt  Pasted--Simplified-QR-Payment-Flow-Implementation-Here-s-the-clean-implementation-for-your-SafePay-webs-1744959912299.txt  Pasted--Step-1-Implement-Mock-API-Endpoint-Immediate-Action-javascript-Copy-In-Node-js-backend-serv-1744824583371.txt  Pasted--index-html-DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta--1744848070262.txt  (+30 more)
(+152 files in other folders)
