[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "pandas>=2.2.3",
    "streamlit-folium>=0.24.1",
    "streamlit>=1.44.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
    "river>=0.22.0",
    "diskcache>=5.6.3",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
    "joblib>=1.4.2",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pyzbar>=0.1.9",
    "python-multipart>=0.0.20",
]
